--- a/index.html
+++ b/index.html
@@ -7,67 +7,62 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Fylo landing page with two column layout</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Features
-  Team
-  Sign In
+  <nav>
+    <ul>
+      <li><a href="#">Features</a></li>
+      <li><a href="#">Team</a></li>
+      <li><a href="#">Sign In</a></li>
+    </ul>
+  </nav>
 
-  All your files in one secure location, accessible anywhere.
+  <h1>All your files in one secure location, accessible anywhere.</h1>
 
-  Fylo stores your most important files in one secure location. 
+  <h2>Fylo stores your most important files in one secure location. 
   Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.
+  family, and co-workers.</h2>
 
-  Get Started
+  <button>Get Started</button>
 
-  Stay productive, wherever you are
+  <h3>Stay productive, wherever you are</h3>
 
-  Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
+  <p>Never let location be an issue when accessing your files. Fylo has you 
+  covered for all of your file storage needs.</p>
 
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
+  <p>Securely share files and folders with friends, family and colleagues for 
+  live collaboration. No email attachments required!</p>
 
-  See how Fylo works
+  <a href="#">See how Fylo works</a>
 
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
+  <blockquote>Fylo has improved our team productivity by an order of magnitude. Since 
+  making the switch our team has become a well-oiled collaboration machine.</blockquote>
 
-  Kyle Burton
-  Founder & CEO, Huddle
+  <h3>Kyle Burton</h3>
+  <h4>Founder & CEO, Huddle</h4>
 
-  Get early access today
+  <h2>Get early access today</h2>
 
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
+  <p>It only takes a minute to sign up and our free starter tier is extremely generous. 
+  If you have any questions, our support team would be happy to help you.</p>
 
-  Get Started For Free
+  <button>Get Started For Free</button>
 
-  Phone: +1-543-123-4567
-  example@fylo.com
+  <p>Phone: <a href="#">+1-543-123-4567</a></p>
+  <p><a href="mailto:example@fylo.com">example@fylo.com</a></p>
 
-  About Us
-  Jobs
-  Press
-  Blog
+  <ul>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Jobs</a></li>
+    <li><a href="#">Press</a></li>
+    <li><a href="#">Blog</a></li>
+  </ul>
 
-  Contact Us
-  Terms
-  Privacy
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  <ul>
+    <li><a href="#">Contact Us</a></li>
+    <li><a href="#">Terms</a></li>
+    <li><a href="#">Privacy</a></li>
+  </ul>
 </body>
 </html>
