--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
   <nav>
+    <img src="images/logo.svg" alt="Fylo Logo" />
     <ul>
       <li><a href="#">Features</a></li>
       <li><a href="#">Team</a></li>
@@ -18,6 +19,7 @@
     </ul>
   </nav>
 
+  <img src="images/illustration-1.svg" />
   <h1>All your files in one secure location, accessible anywhere.</h1>
 
   <h2>Fylo stores your most important files in one secure location. 
@@ -28,8 +30,7 @@
 
   <h3>Stay productive, wherever you are</h3>
 
-  <p>Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.</p>
+  <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
 
   <p>Securely share files and folders with friends, family and colleagues for 
   live collaboration. No email attachments required!</p>
