--- a/index.html
+++ b/index.html
@@ -1,69 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Fylo landing page with two column layout</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <nav>
-    <img src="images/logo.svg" alt="Fylo Logo" />
+    <title>Frontend Mentor | Fylo landing page with two column layout</title>
+  </head>
+  <body>
+    <nav>
+      <img src="images/logo.svg" alt="Fylo Logo" />
+      ul>li*3>a[href]
+      <ul>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Sign In</a></li>
+      </ul>
+    </nav>
+
+    <img src="images/illustration-1.svg" />
+    <h1>All your files in one secure location, accessible anywhere.</h1>
+
+    <h2>
+      Fylo stores your most important files in one secure location. Access them
+      wherever you need, share and collaborate with friends, family, and
+      co-workers.
+    </h2>
+
+    <button>Get Started</button>
+
+    <h3>Stay productive, wherever you are</h3>
+
+    <p>
+      Never let location be an issue when accessing your files. Fylo has you
+      covered for all of your file storage needs.
+    </p>
+
+    <p>
+      Securely share files and folders with friends, family and colleagues for
+      live collaboration. No email attachments required!
+    </p>
+
+    <a href="#">See how Fylo works</a>
+
+    <blockquote>
+      Fylo has improved our team productivity by an order of magnitude. Since
+      making the switch our team has become a well-oiled collaboration machine.
+    </blockquote>
+
+    <h3>Kyle Burton</h3>
+    <h4>Founder & CEO, Huddle</h4>
+
+    <h2>Get early access today</h2>
+
+    <p>
+      It only takes a minute to sign up and our free starter tier is extremely
+      generous. If you have any questions, our support team would be happy to
+      help you.
+    </p>
+
+    <button>Get Started For Free</button>
+
+    <p>Phone: <a href="#">+1-543-123-4567</a></p>
+    <p><a href="mailto:example@fylo.com">example@fylo.com</a></p>
+
     <ul>
-      <li><a href="#">Features</a></li>
-      <li><a href="#">Team</a></li>
-      <li><a href="#">Sign In</a></li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">Blog</a></li>
     </ul>
-  </nav>
 
-  <img src="images/illustration-1.svg" />
-  <h1>All your files in one secure location, accessible anywhere.</h1>
-
-  <h2>Fylo stores your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.</h2>
-
-  <button>Get Started</button>
-
-  <h3>Stay productive, wherever you are</h3>
-
-  <p>Never let location be an issue when accessing your files. Fylo has you covered for all of your file storage needs.</p>
-
-  <p>Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!</p>
-
-  <a href="#">See how Fylo works</a>
-
-  <blockquote>Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.</blockquote>
-
-  <h3>Kyle Burton</h3>
-  <h4>Founder & CEO, Huddle</h4>
-
-  <h2>Get early access today</h2>
-
-  <p>It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.</p>
-
-  <button>Get Started For Free</button>
-
-  <p>Phone: <a href="#">+1-543-123-4567</a></p>
-  <p><a href="mailto:example@fylo.com">example@fylo.com</a></p>
-
-  <ul>
-    <li><a href="#">About Us</a></li>
-    <li><a href="#">Jobs</a></li>
-    <li><a href="#">Press</a></li>
-    <li><a href="#">Blog</a></li>
-  </ul>
-
-  <ul>
-    <li><a href="#">Contact Us</a></li>
-    <li><a href="#">Terms</a></li>
-    <li><a href="#">Privacy</a></li>
-  </ul>
-</body>
+    <ul>
+      <li><a href="#">Contact Us</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#">Privacy</a></li>
+    </ul>
+  </body>
 </html>
