--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
 
     <main>
-      <section>
+      <section class="text-center">
         <img
           src="images/illustration-1.svg"
           alt="Illustration of people organizing folders"
@@ -39,17 +39,21 @@
 
         <h1>All your files in one secure location, accessible anywhere.</h1>
 
+        <!-- @TODO -->
         <p>
           Fylo stores your most important files in one secure location. Access
           them wherever you need, share and collaborate with friends, family,
           and co-workers.
         </p>
-        <input type="text" placeholder="Enter your email" />
+        <form action="">
+          <input type="text" placeholder="Enter your email" />
 
-        <button>Get Started</button>
+          <button>Get Started</button>
+        </form>
       </section>
       <section>
         <img
+          class="margin-bottom"
           src="images/illustration-2.svg"
           alt="Project managers stalking you while you code"
         />
@@ -66,16 +70,18 @@
           for live collaboration. No email attachments required!
         </p>
 
-        <a href="#">See how Fylo works</a>
+        <a class="icon-cta" href="#">See how Fylo works <img src="images/icon-arrow.svg" /></a>
 
         <blockquote>
           Fylo has improved our team productivity by an order of magnitude.
           Since making the switch our team has become a well-oiled collaboration
           machine.
         </blockquote>
-        <img src="images/avatar-testimonial.jpg" alt="Kyle Burton" />
-        <h3>Kyle Burton</h3>
-        <h4>Founder & CEO, Huddle</h4>
+        <div>
+          <img src="images/avatar-testimonial.jpg" alt="Kyle Burton" />
+          <h3>Kyle Burton</h3>
+          <h4>Founder & CEO, Huddle</h4>
+        </div>
       </section>
       <section class="secondary">
         <h2>Get early access today</h2>
